fix offscreen table mobile display
- Adjust table container width to be at most 100 vw

--- a/src/components/Language/LanguagesTable.module.css
+++ b/src/components/Language/LanguagesTable.module.css
@@ -2,9 +2,9 @@
 	height: 40vw;
     width: 80vw;
     
-	
+
     @media (max-width: rem(750)) {
-        width:150vw;
+        width:100vw;
         height:160vw;
     }
 }
